--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -15,13 +15,24 @@
     <div class="container">
         <h1>Kết Nối MQTT và SignalR</h1>
         <p>Chạm vào nút để bật/tắt thiết bị và theo dõi trạng thái trong thời gian thực.</p>
-        <div class="toggle-container">
-            <button id="toggleButton" class="toggle-btn off" onclick="toggleSwitch()">Bật</button>
+
+        <div class="device-container">
+            <div class="device 1" id="device1" onclick="toggleSwitch(1)">
+                <p id="label1">Quạt hút</p>
         </div>
+            <div class="device 2" id="device2" onclick="toggleSwitch(2)">
+                <p id="label2">Đèn LED</p>
+        </div>
+            <div class="device 3" id="device3" onclick="toggleSwitch(3)">
+                <p id="label3">Đèn</p>
+        </div>
+</div>
+
+</div>
     </div>
 
     <footer>
-        <p>&copy; 2024 - Dự án MQTT SignalR Demo | Phát triển bởi Bạn</p>
+        <p>&copy; 2024 - Dự án MQTT SignalR Demo | Phát triển bởi THANHCONGTED</p>
     </footer>
 </body>
 </html>
