chỉnh sửa màu sắc

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -13,8 +13,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Kết Nối MQTT và SignalR</h1>
-        <p>Chạm vào nút để bật/tắt thiết bị và theo dõi trạng thái trong thời gian thực.</p>
+        <h1>Kết Nối MQTT</h1>
+     @* <p>Chạm vào nút để bật/tắt thiết bị và theo dõi trạng thái trong thời gian thực.</p> *@
 
 <div class="device-container">
 <div id="device1" class="device" onclick="toggleSwitch(1)">
