--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -22,8 +22,8 @@
 <div class="data-display">
     <p id="voltage">Điện áp: 0 V</p>
     <p id="current">Dòng điện: 0 A</p>
-    <p id="power">Công suất: 0 W</p>
-    <p id="powerall">Tổng Công suất: 0 W</p>
+    <p id="Today">Công suất Hôm Nay: 0 W</p>
+    <p id="Total">Tổng Công suất: 0 W</p>
 </div>
 
 
