--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -20,6 +20,7 @@
 <div class="device-container">
 
 <div class="data-display">
+    <p id="statusText">Thiết bị: Offline</p>
     <p id="voltage">Điện áp: 0 V</p>
     <p id="current">Dòng điện: 0 A</p>
     <p id="Today">Công suất Hôm Nay: 0 W</p>
